client enable/disable working